--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/Random-Coder21/Resume/blob/34a2e2d22d4f3e487767d23e2de8462f53c0a044/resume-System-Administrator_Level-1-Engineer.docx&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/Random-Coder21/Resume/blob/34a2e2d22d4f3e487767d23e2de8462f53c0a044/Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
